...
        <View style={styles.form}>
          <Controller
            control={control}
            name="displayName"
            render={({ field }) => (
              <TextField
                testID="input-name"
                label="이름"
                value={field.value}
                onChangeText={field.onChange}
                placeholder="앱에서 사용할 이름"
                maxLength={20}
                error={errors.displayName?.message}
...
                autoCapitalize="none"
                error={errors.password?.message}
              />
            )}
          />
          <Button
            label="가입하기"
            onPress={handleSubmit(onSubmit)}
            loading={isSubmitting}
            size="lg"
          />
        </View>

...
